--- a/destination.html
+++ b/destination.html
@@ -29,7 +29,7 @@
                               <li>Karnataka</li>
                         </ul>
                         <p>Price :&#8377;<b>20,000</b></p>
-                        <a href="#" class="cta-button">Explore Country</a>
+                        <button class="exploreBtn">Explore Country</button>
                   </div>
 
                   <div class="destination-card">
@@ -43,7 +43,7 @@
                               <li>Lazio</li>
                         </ul>
                         <p>Price :&#8377;<b>1,20,000</b></p>
-                        <a href="#" class="cta-button">Explore Country</a>
+                        <button class="exploreBtn">Explore Country</button>
                   </div>
 
                   <div class="destination-card">
@@ -57,7 +57,7 @@
                               <li>Quebec</li>
                         </ul>
                         <p>Price :&#8377;<b>80,000</b></p>
-                        <a href="#" class="cta-button">Explore Country</a>
+                       <button class="exploreBtn">Explore Country</button>
                   </div>
 
                   <div class="destination-card">
@@ -71,7 +71,7 @@
                               <li>Mamanuca Islands</li>
                         </ul>
                         <p>Price :&#8377;<b>1,60,000</b></p>
-                        <a href="#" class="cta-button">Explore Country</a>
+                        <button class="exploreBtn">Explore Country</button>
                   </div>
 
                   <div class="destination-card">
@@ -85,7 +85,7 @@
                               <li>Florida</li>
                         </ul>
                         <p>Price :&#8377;<b>2,00,000</b></p>
-                        <a href="#" class="cta-button">Explore Country</a>
+                        <button class="exploreBtn">Explore Country</button>
                   </div>
 
                   <div class="destination-card">
@@ -99,7 +99,7 @@
                               <li>Wales</li>
                         </ul>
                         <p>Price :&#8377;<b>1,30,000</b></p>
-                        <a href="#" class="cta-button">Explore Country</a>
+                        <button class="exploreBtn">Explore Country</button>
                   </div>
 
                   <div class="destination-card">
@@ -113,7 +113,7 @@
                               <li>Auvergne-Rhône-Alpes</li>
                         </ul>
                         <p>Price :&#8377;<b>3,20,000</b></p>
-                        <a href="#" class="cta-button">Explore Country</a>
+                        <button class="exploreBtn">Explore Country</button>
                   </div>
 
                   <div class="destination-card">
@@ -127,7 +127,7 @@
                               <li>Kyoto</li>
                         </ul>
                         <p>Price :&#8377;<b>1,45,000</b></p>
-                        <a href="#" class="cta-button">Explore Country</a>
+                        <button class="exploreBtn">Explore Country</button>
                   </div>
             </div>
       </main>
@@ -135,6 +135,6 @@
       <footer>
             <p>&copy; 2025 Travel Website. All Rights Reserved.</p>
       </footer>
-      
+      <script src="script.js"> </script>
 </body>
 </html>
