--- a/contact.html
+++ b/contact.html
@@ -41,5 +41,7 @@
       <footer>
             <p>&copy; 2025 Travel Website. All Rights Reserved.</p>
       </footer>  
+       <script src="script.js"> </script>
 </body>
+
 </html>
