--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <footer>
             <p>&copy; 2025 Travel Website. All Rights Reserved.</p>
       </footer>
+       <script src="script.js"> </script>
       
 </body>
+
 </html>
